--- a/.github/workflows/update_readme.yaml
+++ b/.github/workflows/update_readme.yaml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests isbnlib
+        pip install requests isbnlib setuptools
 
     - name: Run update script
       run: python books.py
